Temp fix for code overlapping

--- a/apps/docs/styles/main.scss
+++ b/apps/docs/styles/main.scss
@@ -212,3 +212,12 @@ article p strong {
 a:has(code) {
   box-shadow: none !important;
 }
+pre {
+  max-width: 100% !important;
+  overflow: auto;
+  float: left;
+}
+
+pre code {
+  white-space: normal !important;
+}
